--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,8 @@ Nav img{
     margin: 5px;
     color: #7ad2dd;
     font-family: 'Open Sans', sans-serif;
-    font-weight: 200;
+    font-weight: 400;
+    font-size: 22px;
 }
 
 p{
